.provarCaches/00D5f000005vwGkEAI/objects/rstk__iclicplate__c.object
<CustomObject>
    <description>iclicplate__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__iclicplate_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; rstk__iclicplate_plateid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__iclicplate_plateid__c  + &quot;(&quot; + rstk__iclicplate_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_tracksrl__c</fullName>
        <formula>IF(ISPICKVAL(rstk__iclicplate_icitem__r.rstk__icitem_item__r.rstk__peitem_tracksrl_pl__c , &apos;No&apos;), &apos;No&apos;, &apos;Yes&apos;)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula_tracksrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Division in which this License Plate record exists.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory License Plates</relationshipLabel>
        <relationshipName>iclicplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Item Number that this License Plate record represents.</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inventory License Plates</relationshipLabel>
        <relationshipName>iclicplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inventory License Plates</relationshipLabel>
        <relationshipName>iclicplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_locno__c</fullName>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_locnum__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ZZZ_OBSOLETE</label>
        <referenceTo>rstk__sylocnum__c</referenceTo>
        <relationshipLabel>Inventory License Plates</relationshipLabel>
        <relationshipName>iclicplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_lotno__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_plateid__c</fullName>
        <label>Plate Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Number</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Inventory License Plates</relationshipLabel>
        <relationshipName>iclicplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_putaway__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Put Away Transaction Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_serials__c</fullName>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inventory License Plates</relationshipLabel>
        <relationshipName>iclicplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_tolocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Put Away Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inventory License Plates (Put Away Location ID)</relationshipLabel>
        <relationshipName>Inventory_License_Plates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclicplate_tolocnum__c</fullName>
        <label>Put Away Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory License Plate</label>
    <listViews>
        <fullName>rstk__RS_Inventory_License_Plates</fullName>
        <columns>NAME</columns>
        <columns>rstk__iclicplate_div__c</columns>
        <columns>rstk__iclicplate_site__c</columns>
        <columns>rstk__iclicplate_icitem__c</columns>
        <columns>rstk__iclicplate_project__c</columns>
        <columns>rstk__iclicplate_plateid__c</columns>
        <columns>rstk__iclicplate_qty__c</columns>
        <columns>rstk__iclicplate_locid__c</columns>
        <columns>rstk__iclicplate_locno__c</columns>
        <columns>rstk__iclicplate_tolocid__c</columns>
        <columns>rstk__iclicplate_tolocnum__c</columns>
        <columns>rstk__iclicplate_putaway__c</columns>
        <columns>rstk__iclicplate_lotno__c</columns>
        <columns>rstk__iclicplate_serials__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Inventory License Plates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory License Plates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__div_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__iclicplate_div__c) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_div__c))</errorConditionFormula>
        <errorMessage>Division is required and once set cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__item_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__iclicplate_icitem__c) || 
(rstk__iclicplate_icitem__r.rstk__icitem_div__c &lt;&gt; rstk__iclicplate_div__c) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_icitem__c))</errorConditionFormula>
        <errorMessage>Item Number is required and must belong to the license plate division.  Once set it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__locid_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__iclicplate_locid__c) || (rstk__iclicplate_locid__r.rstk__sylocid_site__c &lt;&gt; rstk__iclicplate_site__c) ||(!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_locid__c))</errorConditionFormula>
        <errorMessage>Location ID is required and should belong to the license plate site. Once set it cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__locid_validation2</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__iclicplate_locid__r.rstk__sylocid_dfltavailind__c = true</errorConditionFormula>
        <errorMessage>Default Available for Picking Indicator for the Location ID must be FALSE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__locidlocnum_validation</fullName>
        <active>true</active>
        <description>The Location ID, Location Number cannot be the same as Put Away Location ID, Put Away Location Number</description>
        <errorConditionFormula>!ISBLANK( rstk__iclicplate_locid__c ) &amp;&amp; !ISBLANK( rstk__iclicplate_locno__c ) &amp;&amp; !ISBLANK( rstk__iclicplate_tolocid__c ) &amp;&amp; !ISBLANK( rstk__iclicplate_tolocnum__c ) &amp;&amp; (rstk__iclicplate_locid__c = rstk__iclicplate_tolocid__c) &amp;&amp; (rstk__iclicplate_locno__c = rstk__iclicplate_tolocnum__c)</errorConditionFormula>
        <errorMessage>The Location ID, Location Number cannot be the same as Put Away Location ID, Put Away Location Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__locnum_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(rstk__iclicplate_locno__c))|| 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_locno__c))</errorConditionFormula>
        <errorMessage>Location Number is required and once set cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__plateid_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__iclicplate_plateid__c)||(!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_plateid__c))</errorConditionFormula>
        <errorMessage>Plate Number value is required. Once set it cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__project_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__iclicplate_project__c) || 
(rstk__iclicplate_project__r.rstk__pjproj_div__c &lt;&gt; rstk__iclicplate_div__c) || (!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_project__c))</errorConditionFormula>
        <errorMessage>Project is required and must belong to the license plate division. Once set it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__putaway_validation</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__iclicplate_putaway__c = true &amp;&amp; !ISNEW() &amp;&amp; (
ISCHANGED(rstk__iclicplate_serials__c) || 
ISCHANGED(rstk__iclicplate_tolocid__c) ||  ISCHANGED(rstk__iclicplate_qty__c) ||  
ISCHANGED(rstk__iclicplate_tolocnum__c) || 
ISCHANGED(rstk__iclicplate_lotno__c)
)</errorConditionFormula>
        <errorMessage>Changes are not allowed after Put-Away</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__qty_validation</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__iclicplate_qty__c  &lt; 0</errorConditionFormula>
        <errorMessage>Quantity Cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__serials_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(rstk__iclicplate_serials__c) &amp;&amp;
ISPICKVAL(rstk__iclicplate_icitem__r.rstk__icitem_item__r.rstk__peitem_tracksrl_pl__c, &apos;No&apos;)) || (ISBLANK(rstk__iclicplate_serials__c) &amp;&amp; ISPICKVAL(rstk__iclicplate_icitem__r.rstk__icitem_item__r.rstk__peitem_tracksrl_pl__c, &apos;Yes&apos;))</errorConditionFormula>
        <errorMessage>At least one serial must be specified for a serial item. Serials cannot be specified for a non serial item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__site_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__iclicplate_site__c) || 
(rstk__iclicplate_site__r.rstk__sysite_div__c &lt;&gt; rstk__iclicplate_div__c) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__iclicplate_site__c))</errorConditionFormula>
        <errorMessage>Site is required and must belong to the license plate division. Once set it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__tolocid_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(rstk__iclicplate_tolocid__c) &amp;&amp; rstk__iclicplate_tolocid__r.rstk__sylocid_site__c &lt;&gt; rstk__iclicplate_site__c) 
|| rstk__iclicplate_tolocid__r.rstk__sylocid_dfltavailind__c = true</errorConditionFormula>
        <errorMessage>Put Away Location ID must belong to the license plate site and must have the Default Available for Picking Indicator set to FALSE.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__validate_tracklotprocess</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(rstk__iclicplate_lotno__c) &amp;&amp;
ISPICKVAL(rstk__iclicplate_icitem__r.rstk__icitem_item__r.rstk__peitem_tracklot_pl__c, &apos;No&apos;)) || (ISBLANK(rstk__iclicplate_lotno__c) &amp;&amp; ISPICKVAL(rstk__iclicplate_icitem__r.rstk__icitem_item__r.rstk__peitem_tracklot_pl__c, &apos;Yes&apos;))</errorConditionFormula>
        <errorMessage>Lot number is required for a lot item and cannot be specified for a non lot item.</errorMessage>
    </validationRules>
</CustomObject>